[package]
name = "rug2d"
version = "0.1.1"
authors = ["Kyle Dunne <kyledunne@berkeley.edu>"]
description = "OpenGL-backed library for creating GUIs and other 2d graphical applications"
repository = "https://github.com/kyledunne/rug2d"
keywords = ["gui", "graphics", "2d"]
categories = ["gui", "games", "rendering::graphics-api"]
license = "Apache-2.0"
readme = "README.md"
maintenance = { status = "experimental" }

[dependencies]
sdl2 = "0.31.0"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"
