[package]
name = "rug2d"
version = "0.1.1"
authors = ["Kyle Dunne <kyledunne@berkeley.edu>"]
description = "OpenGL-backed library for creating GUIs and other 2d graphical applications"
repository = "https://github.com/kyledunne/rug2d"
keywords = ["gui", "graphics", "2d"]
categories = ["gui", "games", "rendering::graphics-api"]
license = "Apache-2.0"
readme = "README.md"
maintenance = { status = "experimental" }

[dependencies]
gl = "0.6.0"

[dependencies.sdl2]
    version = "0.31"
    default-features = false
    features = ["ttf","image","mixer"]
